# SimpleRPC

./: .clang-format  .gitignore  CMakeBuilds.sh  CMakeLists.txt  Client.hpp  CompilerFlags.md  LICENSE  README.md  client  client.cpp  server  server.cpp  test1.cpp
Client/: Client.hpp
analysis/: Dockerfile
analysis/log/: log_1.h  main.cpp
include/Client/: Client.hpp
include/Codec/: Decoder.hpp  Deserializer.hpp  Encoder.hpp  Serializer.hpp
include/Msg/: Message.hpp
include/Server/: Server.hpp
include/Utility/: Constants.hpp  Encoder.hpp  Error.hpp  Handler.hpp  Logger.hpp  Traits.hpp  TransCeive.hpp
sample/: CMakeLists.txt  sample_add.cpp
sample/add/: server.cpp
src/: CMakeLists.txt
src/Client/: Client.cpp
src/Codec/: Serializer.cpp
src/Msg/: Message.cpp
src/Server/: Server.cpp
tests/: test_deserialize_return.cpp  test_deserialize_string.cpp  test_deserialize_uuid.cpp  test_encoder_byte.cpp  test_encoder_integral.cpp  test_encoder_string.cpp  test_msg_add_integral.cpp  test_msg_add_string.cpp  test_serializer.cpp
